--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page - Alta Fidelidade</title>
     <link rel="stylesheet" href="./styles.css">
-    < </head>
+    </head>
 
 <body>
 
-    <header>
-        <div class="topo">
+    <header class="header">
+        <div class="container">
             <img id="logo" src="./img/logo-leme.svg" alt="Logo Leme SVG" title="Logo Leme">
-            <button class="botao"><a class="link" href="#">VER ATIVIDADES</a></button>
-        </div>
+           <a class="botao" href="#">VER ATIVIDADES</a>
     </header>
 
     <div>
@@ -30,6 +29,7 @@
     <div id="area-azul"></div>
 
 
+    <div class="container-interno">
 
         <div class="conteudo-img">
             <figure>
@@ -50,6 +50,7 @@
 
         </div>
 
+    </div>
 
 
 
